Refuse to mux H.264 with fourcc H264 into avi without startcode.

Fixes ticket #3638.